# mailer

./: pyproject.toml
example/: app_module.py  app_service.py  main.py  server_smtp.py
nestipy_mailer/: __init__.py  mailer_builder.py  mailer_module.py  mailer_service.py
