[tool.poetry]
name = "nestipy-mailer"
version = "0.1.2"
description = "Nestipy is a Python framework built on top of BlackSheep that follows the modular architecture of NestJS"
authors = ["tsiresymila <tsiresymila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosmtplib = "^3.0.1"


[tool.poetry.group.dev.dependencies]
nestipy-cli = "^0.3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
